--- a/demo/demo/pom.xml
+++ b/demo/demo/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -20,40 +21,40 @@
 
 	<dependencies>
 
+		<!-- project lombok dependency -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.4</version>
 		</dependency>
 
+		<!-- spring boot rest dependency -->
 		<dependency>
 				 <groupId>org.springframework.boot</groupId>
 				 <artifactId>spring-boot-starter-data-rest</artifactId>
 				 <scope>test</scope>
 		 </dependency>
 
+		 <!-- spring boot basic dependency -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-
+		<!-- spring boot web dependency -->
 		<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- spring boot test dependency -->
 		<dependency>
 				 <groupId>org.springframework.boot</groupId>
 				 <artifactId>spring-boot-starter-test</artifactId>
 				 <scope>test</scope>
 		 </dependency>
 
+		 <!-- junit dependency -->
 		 <dependency>
  				 <groupId>junit</groupId>
  				 <artifactId>junit</artifactId>
@@ -64,12 +65,15 @@
 	</dependencies>
 
 	<build>
+
+		<!-- spring boot plugin -->
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
+			<!-- junit plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -88,6 +92,7 @@
 				</configuration>
 			</plugin>
 
+			<!-- JaCoCo plugin -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
