--- a/demo/demo/pom.xml
+++ b/demo/demo/pom.xml
@@ -18,8 +18,8 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<sonar.coverage.jacoco.xmlReportPaths>
-				C:\Users\ryanm\Documents\GitHub\SpringCalculator\demo\demo\target\site\jacoco-unit-tests,
-				C:\Users\ryanm\Documents\GitHub\SpringCalculator\demo\demo\target\site\jacoco-it-tests
+				C:\Users\ryanm\Documents\GitHub\SpringCalculator\demo\demo\target\site\jacoco-unit-tests\jacoco.xml,
+				C:\Users\ryanm\Documents\GitHub\SpringCalculator\demo\demo\target\site\jacoco-it-tests\jacoco.xml
 		</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
